--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,18 @@
-# Compiled class file
 *.class
 
-# Log file
+log/
+logs/
 *.log
+*.logs
 
-# BlueJ files
 *.ctxt
+
+.idea
+.extract
+.service
+.settings
+*.iml
+
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -21,3 +28,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Tomcat autobuild files
+*war-*
+
+target/
+
+
+
+
+
